Fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,13 +11,6 @@ body {
   color: black;
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: rgb(24, 24, 31);
-    color: rgb(238, 238, 238);
-  }
-}
-
 a {
   color: #2563eb;
   text-decoration: none;
