--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -11,9 +11,3 @@
   margin-left: 8px;
   opacity: 0.5;
 }
-
-@media (prefers-color-scheme: dark) {
-  .footer {
-    border-color: #343539;
-  }
-}
